2008-02-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Say we support audio/midi,
	with the new wildmidi plugin in gst-plugins-bad

2008-02-25  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_is_playing): Fix xine-lib backend
	build again, thanks to Götz Waschk
	<waschk@mandriva.org> (Closes: #518560)

2008-02-24  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: And make sure to add the bugreport
	script to EXTRA_DIST

2008-02-24  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/Makefile.am: Fix build (whoops). (Closes: #518486)

============ Version 2.21.94

2008-02-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.21.94

2008-02-24  Philip Withnall  <pwithnall@svn.gnome.org>

	* data/Makefile.am:
	* data/totem-bugreport.py:
	* data/totem.desktop.in.in.in: Add a custom Bug Buddy script
	to get the format of the file last played if using GStreamer.
	Adapted from a patch by Fernando Herrera
	<fherrera@onirica.com>. (Closes: #382074)

2008-02-21  Philip Withnall  <pwithnall@svn.gnome.org>

	* browser-plugin/README.browser-plugin:
	* browser-plugin/totemPluginGlue.cpp:
	* src/backend/bacon-video-widget-xine.c: (setup_config),
	(bacon_video_widget_unrealize):
	* src/totem-uri.c: (totem_dot_dir): Change to use
	g_get_user_config_dir() instead of hardcoding the config
	directory. This breaks old configurations, which were
	in ~/.gnome2/Totem --- they're now in ~/.config/totem/, and
	use the XDG base directory spec. (Closes: #517717)

2008-02-21  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-uri.c: (totem_uri_get_subtitle_for_uri): Remove
	an unused variable (whoops).

2008-02-21  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem-uri.c: (totem_uri_exists),
	(totem_uri_get_subtitle_for_uri): Modified patch from
	Anthony Hocquet <anthony.hocquet@gmail.com> to check for
	subtitle files to autoload with uppercase extensions.
	(Closes: #515638)
