@@ -1,3 +1,9 @@
+2008-02-25  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/plugins/ontop/totem-ontop.c: (update_from_state):
+	Only stay on top if video is playing, not visualisations.
+	(Closes: #501521)
+
 2008-02-25  Bastien Nocera  <hadess@hadess.net>
 
 	* data/mime-type-list.txt: Say we support audio/midi,
